# hey

./: .bumpversion.cfg  .gitignore  .pre-commit-config.yaml  LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements-dev.txt  setup.cfg  tox.ini
.github/: ISSUE_TEMPLATE.md
.github/workflows/: chart-badge.yml  package-stats-updater.yml  python-package-testing.yml  release.yml
hey/: __init__.py  cli.py  consts.py  editor.py  exceptions.py  openai.py
hey/accounts/: auth.py
hey/configs/: __init__.py  cli.py  utils.py
hey/constants/: informations.py  service.py  system.py
hey/exceptions/: auth.py  connection.py  system.py
hey/middlewares/: mindsdb.py
hey/templates/: mindsdb_queries.py
hey/validators/: credentials.py
tests/: __init__.py  sample_test.py  test_accounts.py  test_cli.py  test_configs_utils.py  test_hey.py
tests/exceptions/: test_auth.py  test_connection.py  test_system.py
tests/middlewares/: test_mindsdb.py
tests/templates/: test_mindsdb_queries.py
validators/: credentials.py
