[metadata]
author = Sadra Yahyapour
author_email = lnxpylnxpy@gmail.com
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Intended Audience :: Education
    License :: OSI Approved :: MIT License
    Operating System :: Unix
    Operating System :: POSIX
    Natural Language :: English
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
    Topic :: Utilities
description = Your AI-powered pair programming friend.
license = MIT license
long_description = file: README.md
long_description_content_type = text/markdown
keywords = hey
name = hey-mindsdb
url = https://github.com/lnxpy/hey
version = 0.0.1

[options]
python_requires = >=3.6
install_requires =
    mindsdb-sdk>=1.0.2
    keyring>=23.13.1
    rich>=13.3.4

include_package_data = True
packages = find:
zip_safe = False

[options.packages.find]
include =
    hey
    hey.*

[options.entry_points]
console_scripts =
    hey=hey.cli:main

[bumpversion]
current_version = 0.0.1
commit = True
tag = True

[bumpversion:file:setup.py]
search = version='{current_version}'
replace = version='{new_version}'

[bumpversion:file:hey/__init__.py]
search = __version__ = '{current_version}'
replace = __version__ = '{new_version}'

[bdist_wheel]
universal = 1

[flake8]
exclude = docs
