[metadata]
name = hey_mindsdb
version = 0.2.0
description = Your AI-powered pair programming friend.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/lnxpy/hey
author = Sadra Yahyapour
author_email = lnxpylnxpy@gmail.com
license = MIT
license_files = LICENSE
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Intended Audience :: Education
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Operating System :: POSIX
    Operating System :: Unix
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
    Topic :: Utilities
keywords = hey

[options]
packages = find:
install_requires =
    keyring>=23.13.1
    mindsdb-sdk>=1.0.2
    rich>=13.3.4
python_requires = >=3.7
include_package_data = True
zip_safe = False

[options.packages.find]
include =
    hey
    hey.*

[options.entry_points]
console_scripts =
    hey=hey.cli:main

[bumpversion]
current_version = 0.2.0
commit = True
tag = True

[bumpversion:file:setup.py]
search = version='{current_version}'
replace = version='{new_version}'

[bumpversion:file:hey/__init__.py]
search = __version__ = '{current_version}'
replace = __version__ = '{new_version}'

[bdist_wheel]
universal = 1

[flake8]
exclude = docs
